=== Beim Zugriff auf BlueXP ohne Marktplatz-Abonnement wird jetzt eine Benachrichtigung angezeigt

Wenn Sie jetzt ohne Marktplatzabonnement auf Cloud Volumes ONTAP in BlueXP zugreifen, wird eine Benachrichtigung angezeigt.  In der Benachrichtigung heißt es: „Für diese Arbeitsumgebung ist ein Marktplatzabonnement erforderlich, um den Geschäftsbedingungen von Cloud Volumes ONTAP zu entsprechen.“



== 04. April 2023



=== Unterstützung für China-Regionen für AWS

Ab Cloud Volumes ONTAP 9.12.1 GA werden China-Regionen in AWS jetzt wie folgt unterstützt.

* Einzelknotensysteme werden unterstützt.
* Es werden direkt von NetApp erworbene Lizenzen unterstützt.


Informationen zur regionalen Verfügbarkeit finden Sie im https://bluexp.netapp.com/cloud-volumes-global-regions["Globale Regionenkarten für Cloud Volumes ONTAP"^] .



== 3. April 2023

Die folgenden Änderungen wurden mit der Version 3.9.28 des Connectors eingeführt.



=== Die Region Turin wird jetzt in Google Cloud unterstützt

Die Region Turin wird jetzt in Google Cloud für Cloud Volumes ONTAP und den Connector für Cloud Volumes ONTAP 9.12.1 GA und höher unterstützt.



=== BlueXP digital wallet -Erweiterung

Die BlueXP digital wallet zeigt jetzt die lizenzierte Kapazität an, die Sie mit privaten Angeboten auf dem Marktplatz erworben haben.

https://docs.netapp.com/us-en/bluexp-cloud-volumes-ontap/task-manage-capacity-licenses.html["Erfahren Sie, wie Sie die verbrauchte Kapazität in Ihrem Konto anzeigen können"^] .



=== Unterstützung für Kommentare während der Volume-Erstellung

Mit dieser Version können Sie beim Erstellen eines Cloud Volumes ONTAP FlexGroup Volumes oder FlexVol volume mithilfe der API Kommentare abgeben.



=== Neugestaltung der BlueXP -Benutzeroberfläche für die Seiten „Übersicht“, „Volumes“ und „Aggregates “ von Cloud Volumes ONTAP
