@@ -6083,4 +6083,38 @@
   <block id="174dd97dd1f160583ac76fa482fa6a5e" category="section-title">10. Dezember 2025</block>
   <block id="1760c97f466ea374318a8c0bedcb2aff" category="section-title">11. November 2025</block>
   <block id="291909ca7f153a0249c5e8ab37e16843" category="sidebar">Premium SSD v2-Festplattenleistung in Azure verwalten</block>
+  <block id="0494190504419ddec15209e57cb422e1" category="doc">Ändern der Leistungsstufe von Premium-SSD-Festplatten in Cloud Volumes ONTAP in Azure</block>
+  <block id="953d65863cd6da0e48671f2a30151ae4" category="paragraph">Sie können die Leistungsstufe von Premium SSD-verwalteten Datenträgern in Cloud Volumes ONTAP in Azure über das Azure-Portal erhöhen. Dies ist ein manueller Prozess, bei dem die Festplattenebene jeder Premium-SSD-Festplatte auf eine leistungsstärkere Ebene geändert wird. Durch die Änderung der Leistungsstufe Ihrer NVRAM Festplatte können Leistungsengpässe behoben und die Effizienz Ihres Cloud Volumes ONTAP Systems verbessert werden, indem höhere IOPS- und Durchsatzkapazitäten bereitgestellt werden.</block>
+  <block id="39264f9aea8b7bf4280c732e8f7fcce0" category="list-text">Standardmäßig verwendet Cloud Volumes ONTAP in Azure Premium-SSD-Festplatten für NVRAM in der P20-Tierstufe. Die P20-Leistungsstufe bietet eine ausgewogene Performance, die für die meisten Arbeitslasten geeignet ist. Wenn Ihre Arbeitslast jedoch eine höhere Leistung erfordert, können Sie die NVRAM Festplatte auf eine höhere Stufe wie z. B. P30 aufrüsten.</block>
+  <block id="5984acab069d2008cdff0ddd10ef35a8" category="admonition">Derzeit ist ein Upgrade einer NVRAM Festplatte von der P20- auf die P30-Stufe nur über das Azure-Portal möglich.</block>
+  <block id="686adea694e622fed8c665723cc0407f" category="list-text">Sie ändern die Größe der Festplatte nicht. Die Größe beträgt weiterhin 512 GB. Dieses Verfahren ändert lediglich die Leistungsstufe der Festplatte.</block>
+  <block id="60148540e7bc47a2a5cb3aa5c6669625" category="list-text">Ihre Cloud Volumes ONTAP Version muss 9.11.1 oder höher sein. Bei älteren Versionen können Sie auf Version 9.11.1 oder höher aktualisieren oder einen Feature Policy Variation Request (FPVR) beim NetApp -Support einreichen.</block>
+  <block id="a779e934fd58bae998629bc70c905a6e" category="list-text">Stellen Sie sicher, dass Sie mit dem NetApp -Support zusammenarbeiten, um festzustellen, ob der Engpass in Ihrer Umgebung auf die NVRAM Festplatte zurückzuführen ist und ob ein Upgrade der Speicherebene das Problem behebt.</block>
+  <block id="d7cdcc7698a8a9000d22166d03400c69" category="admonition">Die Aufrüstung der NVRAM Festplatte auf eine höhere Leistungsstufe verursacht zusätzliche Kosten, daher ist es wichtig, den Bedarf für diese Änderung sorgfältig zu prüfen.</block>
+  <block id="9d0625da71c4c34eb7b785d5b10361f5" category="paragraph">Dieses Szenario geht von zwei Knoten aus.<block ref="705cc8c4aab2c0dfb3a3f280da16760d" prefix=" " category="inline-code"></block> Und<block ref="f43c51286fe1559c6253e0b37ec045c6" prefix=" " category="inline-code"></block> in der Cloud Volumes ONTAP Hochverfügbarkeits- (HA) Bereitstellung. Verwenden Sie das Azure-Portal, um die Tarifstufe zu aktualisieren.</block>
+  <block id="1e723d832b26dbdada01d30484af1ea6" category="list-text">Führen Sie diesen Befehl aus, um Folgendes zu erstellen<block ref="164546f60261c7e4be0c5f5f9aaeec86" prefix=" " category="inline-code"></block> der aktive Knoten. Manuelles Failover<block ref="f43c51286fe1559c6253e0b37ec045c6" prefix=" " category="inline-code"></block>Die</block>
+  <block id="e4a4efef44785c5db0774c22b88b3301" category="paragraph"><block ref="be0eb3f3fba241dc79337017002bd31a" prefix="" category="inline-code"></block></block>
+  <block id="58c59ab4d5d488609913efa7b1daaa31" category="list-text">Sign in .</block>
+  <block id="5f941e16410c688a40f0976c92426378" category="list-text">Sobald die Übernahme abgeschlossen ist, wechseln Sie zur VM-Instanz für<block ref="f43c51286fe1559c6253e0b37ec045c6" prefix=" " category="inline-code"></block>Klicken Sie auf die Schaltfläche *Stopp*, um es auszuschalten.</block>
+  <block id="08ef635e7ab7c2978a8da0246a2bef1e" category="list-text">Navigieren Sie zur Ressourcengruppe für<block ref="f43c51286fe1559c6253e0b37ec045c6" prefix=" " category="inline-code"></block> Wählen Sie in der Liste der Datenträger den NVRAM Datenträger aus, dessen Ebene Sie ändern möchten.</block>
+  <block id="19780f0029ed99e7c8b502886df9f61f" category="list-text">Wählen Sie *Größe + Leistung*.</block>
+  <block id="114a05fccf6c6aacd4de79acbf15dce2" category="list-text">Wählen Sie im Dropdown-Menü *Leistungsstufe* die Option aus<block ref="28c0b52834e0a18e7e32e03630f485b8" prefix=" " category="inline-code"></block>Die</block>
+  <block id="90767910461b8d70bc912f880d198275" category="list-text">Schalten Sie den/die/das<block ref="f43c51286fe1559c6253e0b37ec045c6" prefix=" " category="inline-code"></block> Beispiel.</block>
+  <block id="cab445d1f093cc47b00fe708d24a08b6" category="list-text">Überprüfen Sie die Azure-Seriellkonsole, bis die Meldung angezeigt wird:<block ref="cbd30655d53ec6ae9cc96680b3199b33" prefix=" " category="inline-code"></block>Die</block>
+  <block id="37080afbc9c16d84a8b0dcf8d15e364a" category="list-text">Führen Sie diesen Befehl aus, um zurückzugeben<block ref="f43c51286fe1559c6253e0b37ec045c6" prefix=" " category="inline-code"></block>:</block>
+  <block id="d7291565eea042b359c1236f8e4b7fa0" category="paragraph"><block ref="bed89ee1fbafd66cbd4bcbc687800764" prefix="" category="inline-code"></block></block>
+  <block id="5a3ba098de21fbfe363af698dbd7dc32" category="list-text">Wiederholen Sie diese Schritte am<block ref="705cc8c4aab2c0dfb3a3f280da16760d" prefix=" " category="inline-code"></block> um zu machen<block ref="f43c51286fe1559c6253e0b37ec045c6" prefix=" " category="inline-code"></block> übernehmen<block ref="705cc8c4aab2c0dfb3a3f280da16760d" prefix=" " category="inline-code"></block>damit Sie die NVRAM Disk-Ebene für<block ref="705cc8c4aab2c0dfb3a3f280da16760d" prefix=" " category="inline-code"></block>Die</block>
+  <block id="5e26e33ae428b86d29f0358799b6806e" category="paragraph">Wenn Sie beide Knoten eingeschaltet haben, überprüfen Sie die geänderten Parameter, indem Sie die Datenträgerdetails im Azure-Portal für Ihr Cloud Volumes ONTAP System überprüfen.</block>
+  <block id="8861a5a41e4ab66de05c91c8f19bf580" category="inline-link">Ändern Sie Ihre Leistungsstufe ohne Ausfallzeiten.</block>
+  <block id="232bf8b7532401540b643eaaae491221" category="list-text">Azure-Dokumentation:<block ref="4f2764b3c371428c87b46ab0450bdc24" category="inline-link-rx"></block></block>
+  <block id="8fa53b2742d3629d12d18aa0dbdee700" category="inline-link">So erhöhen Sie die Leistungsstufe eines NVRAM Datenträgers in Azure CVO</block>
+  <block id="e82a97ebfb4ba5f5409423bac3464112" category="list-text">Wissensdatenbank für das Support-Team:<block ref="aaedf48f4606cb96bd6bd11286951eb0" category="inline-link-rx"></block></block>
+  <block id="a34f75833ce4fc9abef409835960230b" category="inline-link-macro">Aktualisieren Sie die Cloud Volumes ONTAP Softwareversionen</block>
+  <block id="0a92e86070d4977bdb2b95640510156c" category="list-text"><block ref="0a92e86070d4977bdb2b95640510156c" category="inline-link-macro-rx"></block></block>
+  <block id="038989a859c1ace454721be15bd0d6dd" category="section-title">Neue Berechtigungen wurden der AWS IAM-Richtlinie für HA-Mediatoren hinzugefügt.</block>
+  <block id="d107a81761877e65b1d111ef64cd3c2a" category="paragraph">Diese neuen AWS-Berechtigungen wurden der IAM-Richtlinie für HA-Mediatoren in Cloud Volumes ONTAP Hochverfügbarkeitsumgebungen (HA) hinzugefügt:</block>
+  <block id="60cfe31830d467874bb430da1683504e" category="list-text">sts:Rolle übernehmen</block>
+  <block id="fa70443be85a3feec8a5eb9d46413a96" category="list-text">ec2:DescribeSubnets</block>
+  <block id="48f3ff89d323f3866cd390a624301cc2" category="sidebar">Verwalten der Festplattenleistung in Azure</block>
+  <block id="3cf9ca795dbee25a8b72a8475b07c0fc" category="sidebar">Upgrade der Festplattenleistungsstufe in Azure</block>
 </blocks>
